@startuml

'--------------'
'Hidden members'
'--------------'
hide empty members

'----------'
'Chessboard'
'----------'
class Chessboard {
    - {static} BackgroundColorRulesEngine
    - {static} ChessboardValueRulesEngine
    - fields
    - kingField
    - opponentKingField
    - level
    - fromParentToChildMove
    - children
    + create()
    + createEmpty()
    + createOneStepBeyond()
    + enableValidMoves()
    + getField()
    + resetValidMoves()
    + setKingFieldColors()
}

class Field {
    - BackgroundColorRulesEngine
    - id
    - code
    - coordinates
    - pieceType
    - backgroundColor
    - value
    - relativeValue
    - isValidFrom
    - hasValidTo
    - isAttacking
    - isUnderAttack
    - isCheckMate
    - isStaleMate
    + isActivePlayerField()
    + isInCheckNow()
    + isMovingIntoCheck()
    + isNotAbleToMove()
    + isValid()
    + setAttackingColors()
}

class Move {
    - from
    - to
    + isDuringAMove()
    + isFrom()
    + isValid()
    + setFrom()
    + setTo()
}

class Coordinates {
    - x
    - y
    + {static} create()
    + {static} createCode()
    + {static} createId()
}

class PieceType {
    - color
    - hasBeenKickedOffTheBoard
    - isBeingPromoted
    + getName()
    + getNextPawnPromotion()
    + getValue()
    + isValidMove()
    + setPieceTypeSpecificAttributes()
}

interface RulesEngine {
    - rules
    + addRule()
    + process()
}

interface Rule {
    + isApplicable()
    + getResult()
}

enum BackgroundColor {
    + LIGHT
    + DARK
    + ATTACKING
    + CHECKMATE
    + STALEMATE
    - awtColor
}

'---------'
'Relations'
'---------'
Chessboard *-up- BackgroundColorRulesEngine
Chessboard *-right- ChessboardValueRulesEngine
ChessboardValueRulesEngine -up-|> RulesEngine
Chessboard *-left- Field
Chessboard *-right- Move
Chessboard "0..*"--o Chessboard
Field *-up- BackgroundColorRulesEngine
Field *-left- Coordinates
Field *-- PieceType
Field --* Move
BackgroundColorRulesEngine *-up- CheckmateRule
BackgroundColorRulesEngine *-up- StalemateRule
BackgroundColorRulesEngine *-up- AttackingRule
BackgroundColorRulesEngine *-up- FieldValueRule
BackgroundColorRulesEngine *-up- HardwoodRule
BackgroundColorRulesEngine -up-|> RulesEngine
HardwoodRule -up-|> Rule
FieldValueRule -up-|> Rule
AttackingRule -up-|> Rule
StalemateRule -up-|> Rule
CheckmateRule -up-|> Rule
HardwoodRule .down[#blue].> BackgroundColor
AttackingRule .down[#blue].> BackgroundColor
StalemateRule .down[#blue].> BackgroundColor
CheckmateRule .down[#blue].> BackgroundColor

'-----'
'Notes'
'-----'
note left of BackgroundColor {
    In case of a checkmate the
    background color of a field
    becomes a checkmate color, in
    case of a stalemate a stalemate
    color, if it holds an attacking
    piece an attacking color, if a
    field value has been calculated
    a field value color and otherwise
    a nice light or dark hardwoodcolor.
}

note bottom of ChessboardValueRulesEngine {
    Calculates the field value in order
    to decide which move is the best move.
}


@enduml
